src/style.css
#map {
    width: 500px;
    height: 500px;
    background-color: #ccc;
    overflow: hidden;
    position: relative;
}

.attribution {
    position: absolute;
    bottom: 0;
    right: 0;
    padding: .4rem .6rem;
    font-family: sans-serif;
    font-size: .8rem;
    background-color: white;
    color: #333;
    border-radius: .8rem 0 0 0;
    opacity: .85;
}

.attribution a {
    color: #333;
}

